# Semantic_Classification

./: .gitignore  Makefile  README.md  asset-manifest.json  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: testing.yaml
backend/: pyproject.toml
backend/backend/: main.py
conf/nginx/: nginx.conf
data/: model.csv  model.sav
data/dataset_flash/: .~lock.sample.csv#  sample.csv
data/Договоры/: dogovor-mezhdu-rf-i-respublikoi-belarus-ot_2.rtf  dogovor-mezhdu-rf-i-ssha-ot-17061992.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-argentinskoi-respublikoi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-azerbaidzhanskoi-respublikoi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-estonskoi-respublikoi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-iaponiei-o.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-kitaiskoi-narodnoi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-koreiskoi-narodno-demokraticheskoi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-meksikanskimi-soedinennymi.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-respublikoi-indiei_1.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-respublikoi-krym.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-respublikoi-moldova.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-respublikoi-panama.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-soedinennymi-shtatami.rtf  dogovor-mezhdu-rossiiskoi-federatsiei-i-sotsialisticheskoi-respublikoi.rtf  dogovor-mezhdu-soiuzom-sovetskikh-sotsialisticheskikh-respublik-i_1.rtf  (+18 more)
frontend/: package-lock.json  package.json
frontend/src/: App.js
notebooks/: Baseline.ipynb
semantic/: data.json
tests/: test_project.py
(+844 files in other folders)
