[tool.poetry]
name = "semantic_classification"
version = "0.1.0"
description = "Решение весеннего хакатона - 2024."
authors = [
    "Donskoi Andrei <donskoi.ae@gmail.com>",
    "Artem Medvedev <artiebears@mail.ru>",
    "Ali Ramazanov <ali_ramazanov_2000@mail.ru>",
    "Ivan Butakov <vanessbut@yandex.ru>",
    "Timofei Schcudro <t.shshudro@alumni.nsu.ru>",
]
packages = [
    { include = "semantic/backend", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
transformers = "^4.35.2"
plotly = "^5.18.0"
pytest = "^8.1.1"
fastapi = "^0.110.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
